--- a/app/src/main/res/layout/pdf_layout.xml
+++ b/app/src/main/res/layout/pdf_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     android:id="@+id/pdf_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="vertical">
     <ImageView
@@ -11,16 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ticket_head_cuerpo" />
+    <!--
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp">
-        <TextView
-            android:id="@+id/tv_pdftexto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"/>
+    -->
+    <TextView
+        android:id="@+id/tv_pdftexto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="5"/>
+        <!--
         <ImageView
             android:id="@+id/iv_pdfsello"
             android:layout_width="wrap_content"
@@ -28,6 +34,7 @@
             android:layout_weight="1"
             android:src="@drawable/ticket_sello" />
     </TableRow>
+    -->
     <ImageView
         android:id="@+id/iv_pdffooter"
         android:layout_width="wrap_content"
